[tool.poetry]
name = "bugtest-gke-fail"
version = "0.1.0"
description = "Reproduction code for GKE failed state bug"
authors = ["Christopher Koning <ckoning@pulumi.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pulumi = "^3.140"
pulumi-gcp = "^8.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
